# odin

./: .dockerignore  .env.example  .gitignore  .notes.md  .resume_claude  .secrets.baseline  .stylelintrc.json  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  alembic.ini  claude.py  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  gunicorn.conf.py  main.py  models.py  package-lock.json  package.json  pipeline.py  pyproject.toml  searxng.py  vitest.config.js
.claude/agent-memory/aws-platform-advisor/: MEMORY.md  (+3 more)
.claude/agents/: aws-platform-advisor.md  product-owner.md  python-craftsman.md  regression-debugging-wizard.md
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_signups.py  0002_create_search_history.py
compose/: docker-compose.awslogs.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
compose/initdb/: 10-app-role.sh
config/: .env.example  .markdown-link-check.json  .markdownlint.jsonc  .secrets.baseline  eslint.config.js  gunicorn.conf.py  nginx.conf
docs/: README.md  aws-setup.md  backend.md  claude-api.md  clean-code.md  coding-standards.md  configuration.md  frontend.md  matrix-rebrand.md  prose-style.md  search.md  searxng.md  vision.md
mockup/: 404.html  b.html  profile.html  style-tile.html
scripts/: build_basemap.py  deploy.sh  generate_og_image.py  playwright_prototype.py  readability.py  test-smoke.sh
searxng/: entrypoint.sh  limiter.toml  settings.yml  settings.yml.tmpl
src/odin/: __init__.py  app.py  auth.py  cache.py  claude.py  config.py  curl_fetch.py  db.py  email.py  fetch.py  history.py  identity.py  log.py  main.py  models.py  pipeline.py  searxng.py  signups.py  store.py  url_filter.py
static/: 404.html  robots.txt  site.webmanifest  sitemap.xml
static/css/: odin.css
static/js/: locationsmap.js  odin.js  profile.js
static/maps/: basemap.geojson
stubs/asyncpg/: __init__.pyi
stubs/textstat/: __init__.pyi
templates/: index.html  profile.html
tests/: __init__.py  conftest.py  helpers.py  test_account.py  test_auth.py  test_auth_routes.py  test_cache.py  test_claude.py  test_compose_config.py  test_config.py  test_curl_fetch.py  test_email.py  test_fetch.py  test_identity.py  test_log.py  test_main.py  test_models.py  test_pages.py  test_pipeline.py  test_profile.py  test_search.py  test_search_aggregator.py  test_search_backends.py  test_search_registry.py  test_searxng_settings.py  test_store.py  test_tiered_fetch.py  test_url_filter.py
tests/integration/: __init__.py  conftest.py  test_brave.py  test_db_privileges.py  test_email_smtp.py  test_history.py  test_profile.py  test_searxng.py  test_signups.py  test_wikipedia.py
tests/js/: loadLocationsMap.js  loadProfile.js  locationsmap.test.js  profile.test.js
(+46 files in other folders)
